--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,112 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@1,700&display=swap");
+
+* {
+	margin: 0;
+	font-family: "Comic Neue", cursive;
+	color: yellow;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.navbar {
+	padding: 20px;
+	display: flex;
+	align-items: center;
+	width: 100%;
+	margin: 0 auto;
+	border-bottom: 5px solid red;
+	background-color: yellow;
+}
+.navbar h1 {
+	color: red;
+}
+.navbar .links {
+	margin-left: auto;
+}
+.navbar a {
+	margin-left: 16px;
+	text-decoration: none;
+	padding: 6px;
+}
+.navbar a:hover {
+	color: purple;
+}
+.content {
+	max-width: 600px;
+	margin: 40px auto;
+	padding: 20px;
+}
+
+h1 {
+	color: red;
+}
+
+body {
+	background-color: blue;
+}
+
+p {
+	color: yellow;
+}
+
+button {
+	background-color: red;
+	color: yellow;
+}
+
+.blog-preview {
+	padding: 10px 16px;
+	margin: 20px 0;
+	border-bottom: 3px solid yellow;
+}
+.blog-preview:hover {
+	box-shadow: 1px 3px 5px rgba(0, 0, 0, 1);
+}
+.blog-preview h2 {
+	font-size: 20px;
+	color: red;
+	margin-bottom: 8px;
+}
+.blog-preview a {
+	text-decoration: none;
+}
+.blog-details h2 {
+	font-size: 25px;
+	color: red;
+	margin-bottom: 10px;
+}
+.blog-details div {
+	margin: 20px 0;
+}
+
+.create {
+	max-width: 400px;
+	margin: 0 auto;
+	text-align: center;
+}
+.create label {
+	text-align: left;
+	display: block;
+}
+.create h2 {
+	font-size: 25px;
+	color: red;
+	margin-bottom: 30px;
+}
+.create input,
+.create textarea,
+.create select {
+	width: 100%;
+	padding: 6px 10px;
+	margin: 10px 0;
+	border: 2px solid yellow;
+	box-sizing: border-box;
+	display: block;
+	background-color: red;
+}
+.create button {
+	background: yellow;
+	color: red;
+	border: 0;
+	padding: 8px;
+	border-radius: 8px;
+	cursor: pointer;
 }
